samples/_failures_safe/1761439599_7a3f76_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_064e9a4f.c: In function ‘main’:
./samples/SAFE/__tmp_064e9a4f.c:150:52: error: expected ‘)’ at end of input
  150 |     size_t compressed_size = compress_rle(input_buf
      |                                          ~         ^
      |                                                    )
./samples/SAFE/__tmp_064e9a4f.c:150:43: error: incompatible type for argument 1 of ‘compress_rle’
  150 |     size_t compressed_size = compress_rle(input_buf
      |                                           ^~~~~~~~~
      |                                           |
      |                                           Buffer
./samples/SAFE/__tmp_064e9a4f.c:56:36: note: expected ‘const uint8_t *’ {aka ‘const unsigned char *’} but argument is of type ‘Buffer’
   56 | size_t compress_rle(const uint8_t *input, size_t input_size, uint8_t *output, size_t output_capacity) {
      |                     ~~~~~~~~~~~~~~~^~~~~
./samples/SAFE/__tmp_064e9a4f.c:150:30: error: too few arguments to function ‘compress_rle’
  150 |     size_t compressed_size = compress_rle(input_buf
      |                              ^~~~~~~~~~~~
./samples/SAFE/__tmp_064e9a4f.c:56:8: note: declared here
   56 | size_t compress_rle(const uint8_t *input, size_t input_size, uint8_t *output, size_t output_capacity) {
      |        ^~~~~~~~~~~~
./samples/SAFE/__tmp_064e9a4f.c:150:5: error: expected declaration or statement at end of input
  150 |     size_t compressed_size = compress_rle(input_buf
      |     ^~~~~~
